# book

./: .gitignore  404.html  CNAME  README.md  actor-model.html  basics.html  book.toml  cross-contract.html  impressum.html  index.html  print.html  searchindex.js  searchindex.json  section-4-best-practices  setting-up-env.html  wasmd-quick-start.html
.github/workflows/: deploy.yml  test.yml
actor-model/: actors-in-blockchain.html  contract-as-actor.html  idea.html
basics/: building-contract.html  entry-points.html  events.html  execute.html  fp-types.html  funds.html  good-practices.html  multitest-intro.html  query-testing.html  query.html  rust-project.html  state.html
cross-contract/: design.html  fixing-admin.html  map-storage.html  working-with-time.html
examples/03-basics/: Cargo.toml
examples/03-contract-structure/: Cargo.toml
examples/03-contract-structure/src/: contract.rs  lib.rs  msg.rs
examples/05-cross-contract/: Cargo.toml
examples/05-cross-contract/contracts/admin/: Cargo.toml
examples/05-cross-contract/contracts/admin/.cargo/: config
examples/05-cross-contract/contracts/admin/examples/: schema.rs
examples/05-cross-contract/contracts/admin/src/: contract.rs  lib.rs  msg.rs  state.rs
src/: ## CosmWasm Smart Contract Development G.md  README.md  SUMMARY.md  actor-model.md  basics.md  cross-contract.md  impressum.md  setting-up-env.md  wasmd-quick-start.md
src/actor-model/: actors-in-blockchain.md  contract-as-actor.md  idea.md
src/basics/: funds.md  (+11 more)
wasmd-quick-start/: preparing-account.html  testned-interaction.html  testnet.html
(+61 files in other folders)
